fixed alignment issue with uvi

--- a/style.css
+++ b/style.css
@@ -18,5 +18,5 @@ html {
 }
 
 .uvI {
-  width: 92px;
+  width: 95px;
 }
